Remove USE_CDRTOOLS from bsd.port.mk
This macros has been useless since cdrtools-cjk port has gone.
This macros also lead to badly handled dependencies assuming that the dependency
on cdrtools was most BUILD and RUN dependency. While most of the time it is
simply a RUN dependency and sometime a build one.

While here:
- Trim some headers
- Convert some ports to optionsng
- Convert some ports to USES= gettext


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316600 35697150-7ecd-e111-bb59-0022644237b5

--- a/audio/abcde/Makefile
+++ b/audio/abcde/Makefile
@@ -33,7 +33,7 @@ REPLAYGAIN_DESC?=	Enable (vorbis|mp3)gain support
 .include <bsd.port.options.mk>
 
 .if ${PORT_OPTIONS:MCDDA2WAV}
-USE_CDRTOOLS=	yes
+RUN_DEPENDS+=	cdda2wav:${PORTSDIR}/sysutils/cdrtools
 .endif
 
 .if ${PORT_OPTIONS:MDAGRAB}
