--- a/audio/mp3burn/Makefile
+++ b/audio/mp3burn/Makefile
@@ -1,7 +1,4 @@
-# New ports collection makefile for:	mp3burn
-# Date created:				17th December 2003
-# Whom:					Vincent Tantardini <vinc@FreeBSD-fr.org>
-#
+# Created by: Vincent Tantardini <vinc@FreeBSD-fr.org>
 # $FreeBSD$
 
 PORTNAME=	mp3burn
@@ -17,13 +14,13 @@ RUN_DEPENDS=	mpg123:${PORTSDIR}/audio/mpg123 \
 		ogg123:${PORTSDIR}/audio/vorbis-tools \
 		p5-MP3-Info>=0:${PORTSDIR}/audio/p5-MP3-Info \
 		p5-Ogg-Vorbis-Header>=0:${PORTSDIR}/audio/p5-Ogg-Vorbis-Header \
-		p5-String-ShellQuote>=0:${PORTSDIR}/textproc/p5-String-ShellQuote
+		p5-String-ShellQuote>=0:${PORTSDIR}/textproc/p5-String-ShellQuote \
+		cdda2wav:${PORTSDIR}/sysutils/cdrtools
 
 WRKSRC=		${WRKDIR}/${PORTNAME}
 
 USE_BZIP2=	yes
 USE_PERL5=	yes
-USE_CDRTOOLS=	yes
 NO_BUILD=	yes
 
 PLIST_FILES=	bin/mp3burn
