--- a/sysutils/freesbie/Makefile
+++ b/sysutils/freesbie/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	FreeSBIE
-# Date created:		27 March 2003
-# Whom:			Thomas E. Zander <riggs@rrr.de>
-#
+# Created by: Thomas E. Zander <riggs@rrr.de>
 # $FreeBSD$
-#
 
 PORTNAME=	freesbie
 PORTVERSION=	2.0.20070710
@@ -16,8 +12,9 @@ DISTNAME=	${PORTNAME}-${PORTVERSION:S/2.0.//}
 MAINTAINER=	riggs@rrr.de
 COMMENT=	Yet another cool answer to the system-on-cd question
 
+RUN_DEPENDS=	cdrecord:${PORTSDIR}/sysutils/cdrtools
+
 USE_BZIP2=	yes
-USE_CDRTOOLS=	yes
 NO_BUILD=	yes
 
 WRKSRC=		${WRKDIR}/${PORTNAME}2
