--- a/sysutils/graveman/Makefile
+++ b/sysutils/graveman/Makefile
@@ -12,11 +12,12 @@ MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Another GTK2 frontend for cdrecord, mkisofs, readcd, and sox
 
 LIB_DEPENDS=	mng:${PORTSDIR}/graphics/libmng
+BUILD_DEPENDS=	cdrecord:${PORTSDIR}/sysutils/cdrtools
+RUN_DEPENDS=	cdrecord:${PORTSDIR}/sysutils/cdrtools
 
 USE_BZIP2=	yes
 USE_GMAKE=	yes
 GNU_CONFIGURE=	yes
-USE_CDRTOOLS=	yes
 USES=		pathfix pkgconfig gettext
 USE_GNOME=	libglade2 intlhack gnomeprefix
 CONFIGURE_ENV=	LIBS="-L${LOCALBASE}/lib"
