--- a/sysutils/tkdvd/Makefile
+++ b/sysutils/tkdvd/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	tkdvd
-# Date created:		01 Sep 2008
-# Whom:			Dmitry Marakasov <amdmi3@FreeBSD.org>
-#
+# Created by: Dmitry Marakasov <amdmi3@FreeBSD.org>
 # $FreeBSD$
-#
 
 PORTNAME=	tkdvd
 PORTVERSION=	4.0.9
@@ -15,11 +11,11 @@ MASTER_SITES=	http://regis.damongeot.free.fr/tkdvd/dl/ \
 MAINTAINER=	amdmi3@FreeBSD.org
 COMMENT=	GUI to dvd+rw-tools and cdrecord
 
-RUN_DEPENDS=	growisofs:${PORTSDIR}/sysutils/dvd+rw-tools
+RUN_DEPENDS=	growisofs:${PORTSDIR}/sysutils/dvd+rw-tools \
+		cdrecord:${PORTSDIR}/sysutils/cdrtools
 
 USE_TCL=	84+
 USE_TK=		84+
-USE_CDRTOOLS=	yes
 
 WRKSRC=		${WRKDIR}/${PORTNAME}
 
@@ -32,6 +28,8 @@ DESKTOP_ENTRIES="TkDVD" \
 		"tkdvd" \
 		"" \
 		true
+
+.include <bsd.port.options.mk>
 
 post-patch:
 	@${REINPLACE_CMD} -e 's|tclsh|${TCLSH}|' ${WRKSRC}/install.tcl \
@@ -47,7 +45,7 @@ do-install:
 	${INSTALL_SCRIPT} ${WRKSRC}/tkdvd-install.sh ${PREFIX}/bin/tkdvd
 	${INSTALL_DATA} ${WRKSRC}/icons/tkdvd-2-48.png \
 		${PREFIX}/share/pixmaps/tkdvd.png
-.if !defined(NOPORTDOCS)
+.if ${PORT_OPTIONS:MDOCS}
 	${MKDIR} ${DOCSDIR}
 	${INSTALL_DATA} ${WRKSRC}/README ${WRKSRC}/FAQ ${WRKSRC}/doc/c* \
 		${DOCSDIR}
