--- a/sysutils/bashburn/Makefile
+++ b/sysutils/bashburn/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	sysutils/bashburn
-# Date created:				24 august 2007
-# Whom:					Martin Tournoij <carpetsmoker@xs4all.nl>
-#
+# Created by: Martin Tournoij <carpetsmoker@xs4all.nl>
 # $FreeBSD$
-#
 
 PORTNAME=	bashburn
 PORTVERSION=	2.1.2
@@ -15,48 +11,46 @@ DISTNAME=	BashBurn-${PORTVERSION}
 MAINTAINER=	sylvio@FreeBSD.org
 COMMENT=	CD burning bash script
 
-RUN_DEPENDS=	${LOCALBASE}/bin/bash:${PORTSDIR}/shells/bash
+RUN_DEPENDS=	${LOCALBASE}/bin/bash:${PORTSDIR}/shells/bash \
+		cdrecord:${PORTSDIR}/sysutils/cdrtools
 
 NO_BUILD=	yes
-USE_CDRTOOLS=	yes
 
-OPTIONS=	CDRDAO "Disk-At-Once Recording" on \
-		DVDTOOLS "Frontend to master DVD media" on \
-		EJECT "Ejecting the CD/DVD drive" on \
-		FLAC "Free Lossless Audio Codec" on \
-		LAME "LGPL MP3 encoder" on \
-		MPG123 "Mpg audio player (for MP3-decompression)" on \
-		NORMALIZE "An audio file volume normalizer" on \
-		SUDO "To allow non-privileged users to burn CD's" on \
-		VORBIS "ogg/vorbis audio encoding/decoding" on
+OPTIONS_DEFINE=	CDRDAO DVDTOOLS EJECT FLAC LAME MPG123 NORMALIZE SUDO VORBIS
+OPTIONS_DEFAULT=	CDRDAO DVDTOOLS EJECT FLAC LAME MPG123 NORMALIZE SUDO VORBIS
+CDRDAO_DESC=	Disk-At-Once Recording
+DVDTOOLS_DESC=	Frontend to master DVD media
+EJECT_DESC=	Ejecting the CD/DVD drive
+NORMALIZE_DESC=	An audio file volume normalizer
+SUDO_DESC=	To allow non-privileged users to burn CD's
 
-.include <bsd.port.pre.mk>
+.include <bsd.port.options.mk>
 
-.if !defined(WITHOUT_CDRDAO)
+.if ${PORT_OPTIONS:MCDRDAO}
 RUN_DEPENDS+=	${LOCALBASE}/bin/cdrdao:${PORTSDIR}/sysutils/cdrdao
 .endif
-.if !defined(WITHOUT_DVDTOOLS)
+.if ${PORT_OPTIONS:MDVDTOOLS}
 RUN_DEPENDS+=	${LOCALBASE}/bin/dvd+rw-mediainfo:${PORTSDIR}/sysutils/dvd+rw-tools
 .endif
-.if !defined(WITHOUT_EJECT)
+.if ${PORT_OPTIONS:MEJECT}
 RUN_DEPENDS+=	${LOCALBASE}/sbin/eject:${PORTSDIR}/sysutils/eject
 .endif
-.if !defined(WITHOUT_FLAC)
+.if ${PORT_OPTIONS:MFLAC}
 RUN_DEPENDS+=	${LOCALBASE}/bin/flac:${PORTSDIR}/audio/flac
 .endif
-.if !defined(WITHOUT_LAME)
+.if ${PORT_OPTIONS:MLAME}
 RUN_DEPENDS+=	${LOCALBASE}/bin/lame:${PORTSDIR}/audio/lame
 .endif
-.if !defined(WITHOUT_MPG123)
+.if ${PORT_OPTIONS:MMPG123}
 RUN_DEPENDS+=	${LOCALBASE}/bin/mpg123:${PORTSDIR}/audio/mpg123
 .endif
-.if !defined(WITHOUT_NORMALIZE)
+.if ${PORT_OPTIONS:MNORMALIZE}
 RUN_DEPENDS+=	${LOCALBASE}/bin/normalize:${PORTSDIR}/audio/normalize
 .endif
-.if !defined(WITHOUT_SUDO)
+.if ${PORT_OPTIONS:MSUDO}
 RUN_DEPENDS+=	${LOCALBASE}/bin/sudo:${PORTSDIR}/security/sudo
 .endif
-.if !defined(WITHOUT_VORBIS)
+.if ${PORT_OPTIONS:MVORBIS}
 RUN_DEPENDS+=	${LOCALBASE}/bin/ogg123:${PORTSDIR}/audio/vorbis-tools
 .endif
 
@@ -75,4 +69,4 @@ do-install:
 	@${CHOWN} -R ${SHAREOWN}:${SHAREGRP} ${DATADIR}
 	@${ECHO_CMD}; ${CAT} ${PKGMESSAGE}; ${ECHO_CMD}
 
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
