--- a/sysutils/eroaster/Makefile
+++ b/sysutils/eroaster/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	eroaster
-# Date Created:		20 Dic 2003
-# Whom:			Davide D'Amico <dave@gufi.org>
-#
+# Created by: Davide D'Amico <dave@gufi.org>
 # $FreeBSD$
-#
 
 PORTNAME=	eroaster
 PORTVERSION=	2.2.0.0.6
@@ -16,6 +12,7 @@ MAINTAINER=	dave@gufi.org
 COMMENT=	A GNOME2 frontend to mkisofs/cdrecord
 
 BUILD_DEPENDS=	${PYTHON_SITELIBDIR}/gtk-2.0/gnome/_gnome.so:${PORTSDIR}/x11-toolkits/py-gnome2
+RUN_DEPENDS=	cdrecord:${PORTSDIR}/sysutils/cdrtools
 
 .if defined(WITH_ADDITIONAL_PROGRAMS)
 BUILD_DEPENDS+=	bchunk:${PORTSDIR}/sysutils/bchunk \
@@ -30,7 +27,6 @@ BUILD_DEPENDS+=	bchunk:${PORTSDIR}/sysutils/bchunk \
 
 GNU_CONFIGURE=	yes
 USE_PYTHON=	yes
-USE_CDRTOOLS=	yes
 
 pre-everything::
 	@${ECHO_MSG} "===>  You can enable more features by defining WITH_ADDITIONAL_PROGRAMS"
