--- a/sysutils/livecd/Makefile
+++ b/sysutils/livecd/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	FreeBSD LiveCD
-# Date created:		Wed Jun 26 21:40:01 UTC 2002
-# Whom:	Edson Brandi <ebrandi.home@uol.com.br> et al
-#
+# Created by: Edson Brandi <ebrandi.home@uol.com.br> 
 # $FreeBSD$
-#
 
 PORTNAME=	livecd
 PORTVERSION=	1.2.4b
@@ -14,8 +10,9 @@ MASTER_SITES=	http://www.primeirospassos.org/
 MAINTAINER=	ebrandi.home@uol.com.br
 COMMENT=	Tool Set to create custom FreeBSD LiveCD
 
+RUN_DEPENDS=	cdrecord:${PORTSDIR}/sysutils/cdrtools
+
 NO_BUILD=	yes
-USE_CDRTOOLS=	yes
 MAKE_ENV=	INSTALL_DATA="${INSTALL_DATA}" \
 		INSTALL_SCRIPT="${INSTALL_SCRIPT}"
 
