--- a/sysutils/mybashburn/Makefile
+++ b/sysutils/mybashburn/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	mybashburn
-# Date created:				24 jan 2008
-# Whom:					Martin Tournoij <carpetsmoker@xs4all.nl>
-#
+# Created by: Martin Tournoij <carpetsmoker@xs4all.nl>
 # $FreeBSD$
-#
 
 PORTNAME=	mybashburn
 PORTVERSION=	1.0.2
@@ -17,49 +13,48 @@ COMMENT=	Ncurses CD burning bash script
 RUN_DEPENDS=	bash:${PORTSDIR}/shells/bash \
 		cdialog:${PORTSDIR}/devel/cdialog
 
+RUN_DEPENDS=	cdrecord:${PORTSDIR}/sysutils/cdrtools
+
 NO_BUILD=	yes
-USE_CDRTOOLS=	yes
 MAN1=		mybashburn.1
 MANCOMPRESSED=	yes
 PORTDOCS=	COPYING CREDITS ChangeLog FAQ FILES HOWTO INSTALL README TODO
 
-OPTIONS=	CDRDAO "Disk-At-Once Recording" on \
-		DVDTOOLS "Frontend to master DVD media" on \
-		EJECT "Ejecting the CD/DVD drive" on \
-		FLAC "Free Lossless Audio Codec" on \
-		LAME "LGPL MP3 encoder" on \
-		MPG123 "Mpg audio player (for MP3-decompression)" on \
-		NORMALIZE "An audio file volume normalizer" on \
-		SUDO "To allow non-privileged users to burn CD's" on \
-		VORBIS "ogg/vorbis audio encoding/decoding" on
+OPTIONS_DEFINE=	CDRDAO DVDTOOLS EJECT FLAC LAME MPG123 NORMALIZE SUDO VORBIS DOCS
+OPTIONS_DEFAULT=	CDRDAO DVDTOOLS EJECT FLAC LAME MPG123 NORMALIZE SUDO VORBIS
+CDRDAO_DESC=	Disk-At-Once Recording
+DVDTOOLS_DESC=	Frontend to master DVD media
+EJECT_DESC=	Ejecting the CD/DVD drive
+NORMALIZE_DESC=	An audio file volume normalizer
+SUDO_DESC=	To allow non-privileged users to burn CD's
 
-.include <bsd.port.pre.mk>
+.include <bsd.port.options.mk>
 
-.if !defined(WITHOUT_CDRDAO)
+.if ${PORT_OPTIONS:MCDRDAO}
 RUN_DEPENDS+=	cdrdao:${PORTSDIR}/sysutils/cdrdao
 .endif
-.if !defined(WITHOUT_DVDTOOLS)
+.if ${PORT_OPTIONS:MDVDTOOLS}
 RUN_DEPENDS+=	dvd+rw-mediainfo:${PORTSDIR}/sysutils/dvd+rw-tools
 .endif
-.if !defined(WITHOUT_EJECT)
+.if ${PORT_OPTIONS:MEJECT}
 RUN_DEPENDS+=	eject:${PORTSDIR}/sysutils/eject
 .endif
-.if !defined(WITHOUT_FLAC)
+.if ${PORT_OPTIONS:MFLAC}
 RUN_DEPENDS+=	flac:${PORTSDIR}/audio/flac
 .endif
-.if !defined(WITHOUT_LAME)
+.if ${PORT_OPTIONS:MLAME}
 RUN_DEPENDS+=	lame:${PORTSDIR}/audio/lame
 .endif
-.if !defined(WITHOUT_MPG123)
+.if ${PORT_OPTIONS:MMPG123}
 RUN_DEPENDS+=	mpg123:${PORTSDIR}/audio/mpg123
 .endif
-.if !defined(WITHOUT_NORMALIZE)
+.if ${PORT_OPTIONS:MNORMALIZE}
 RUN_DEPENDS+=	normalize:${PORTSDIR}/audio/normalize
 .endif
-.if !defined(WITH_SUDO)
+.if ${PORT_OPTIONS:MSUDO}
 RUN_DEPENDS+=	sudo:${PORTSDIR}/security/sudo
 .endif
-.if !defined(WITHOUT_VORBIS)
+.if ${PORT_OPTIONS:MVORBIS}
 RUN_DEPENDS+=	ogg123:${PORTSDIR}/audio/vorbis-tools
 .endif
 
@@ -76,9 +71,9 @@ do-install:
 	${INSTALL_DATA} ${WRKSRC}/etc/mybashburnrc ${PREFIX}/etc/mybashburnrc.sample
 	@(cd ${WRKSRC}/ && ${COPYTREE_SHARE} "burning config convert lang menus misc" ${DATADIR}/)
 
-.if !defined(NOPORTDOCS)
+.if ${PORT_OPTIONS:MDOCS}
 	${MKDIR} ${DOCSDIR}
 	${INSTALL_DATA} ${PORTDOCS:S,^,${WRKSRC}/,} ${DOCSDIR}/
 .endif
 
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
