--- a/math/ufc/Makefile
+++ b/math/ufc/Makefile
@@ -2,10 +2,9 @@
 # $FreeBSD$
 
 PORTNAME=	ufc
-PORTVERSION=	2.0.5
-PORTREVISION=	1
+PORTVERSION=	${MMVERSION}.0
 CATEGORIES=	math python
-MASTER_SITES=	http://launchpad.net/${PORTNAME}/2.0.x/${PORTVERSION}/+download/
+MASTER_SITES=	http://launchpad.net/${PORTNAME}/${MMVERSION}.x/${PORTVERSION}/+download/
 
 MAINTAINER=	jwbacon@tds.net
 COMMENT=	Unified framework for finite element assembly
@@ -19,12 +18,15 @@ USES=		cmake
 USE_PYTHON=	-2.7
 PYDISTUTILS_PKGNAME=	ufc
 
+CMAKE_ARGS+=	-DUFC_PKGCONFIG_DIR=${PREFIX}/libdata/pkgconfig
+
 FETCH_ARGS=	-F
+
+MMVERSION=	2.2
 
 post-patch:
 	${REINPLACE_CMD} -e 's|lib/pkgconfig|libdata/pkgconfig|g' \
 		${WRKSRC}/CMakeLists.txt
-	${REINPLACE_CMD} -i '' -e 's|"usr")|"usr", "local")|g' \
-		${WRKSRC}/src/utils/python/ufc_utils/build.py
+	${REINPLACE_CMD} -i '' -e 's|os.path.join(os.path.sep, "usr")|os.path.normpath("${PREFIX}")|' ${WRKSRC}/src/utils/python/ufc_utils/build.py
 
 .include <bsd.port.mk>
