--- a/x11/xvkbd/Makefile
+++ b/x11/xvkbd/Makefile
@@ -1,59 +1,53 @@
-# New ports collection makefile for:	xvkbd
-# Date created:		26 November 2000
-# Whom:			roam@FreeBSD.org
-#
+# Created by: roam@FreeBSD.org
 # $FreeBSD$
-#
 
 PORTNAME=	xvkbd
-PORTVERSION=	3.3
+PORTVERSION=	3.4a
 CATEGORIES=	x11
 MASTER_SITES=	http://homepage3.nifty.com/tsato/xvkbd/
 
 MAINTAINER=	ports@FreeBSD.org
-COMMENT=	A virtual keyboard for X applications
+COMMENT=	Virtual keyboard for X applications
 
-# FIXME: IMHO, there really ought to be a GPL-2+ option or some such.
-LICENSE=	GPLv2 GPLv3
-LICENSE_COMB=	dual
-
-MAN1=		xvkbd.1
+LICENSE=	GPLv2 # (or later)
 
 OPTIONS_DEFINE=	XAW3D XTEST NLS DOCS
 OPTIONS_DEFAULT=	XTEST
-XAW3D_DESC=	Xaw3d support
+XAW3D_DESC=	Xaw3d widget library support
 XTEST_DESC=	XTEST extensions support
 
-USE_IMAKE=	yes
 USE_XORG=	ice sm x11 xaw xext xmu xpm xt
+USE_IMAKE=	yes
 
-.include <bsd.port.pre.mk>
+MAN1=		xvkbd.1
+
+.include <bsd.port.options.mk>
 
 .if ${PORT_OPTIONS:MXAW3D}
-BUILD_DEPENDS=	${LOCALBASE}/lib/libXaw3d.a:${PORTSDIR}/x11-toolkits/Xaw3d
+LIB_DEPENDS+=	Xaw3d:${PORTSDIR}/x11-toolkits/Xaw3d
+XK_DEFSUBST+=	-e 's/XCOMM define XAW3d/\#define XAW3d/;'
 .endif
 
-.if ${PORT_OPTIONS:MXAW3D}
-XK_DEFSUBST +=	-e 's/XCOMM define XAW3D/\#define XAW3D/;'
-.endif
 .if ${PORT_OPTIONS:MXTEST}
-XK_DEFSUBST +=	-e 's/XCOMM define XTEST/\#define XTEST/;'
 USE_XORG+=	xtst
+XK_DEFSUBST+=	-e 's/XCOMM define XTEST/\#define XTEST/;'
 .endif
+
 .if ${PORT_OPTIONS:MNLS}
-XK_DEFSUBST +=	-e 's/XCOMM define I18N/\#define I18N/;'
+XK_DEFSUBST+=	-e 's/XCOMM define I18N/\#define I18N/;'
 .endif
 
 post-patch:
 .if defined(XK_DEFSUBST)
-		${REINPLACE_CMD} ${XK_DEFSUBST} ${WRKSRC}/Imakefile
+	@${REINPLACE_CMD} ${XK_DEFSUBST} ${WRKSRC}/Imakefile
 .endif
-		${REINPLACE_CMD} -e "s@/usr/include/@${LOCALBASE}/include/@" ${WRKSRC}/XVkbd-small.ad
+	@${REINPLACE_CMD} -e \
+		's|/usr/include/|${LOCALBASE}/include/|' ${WRKSRC}/XVkbd-small.ad
 
-.if ${PORT_OPTIONS:MDOCS}
 post-install:
-		${MKDIR} ${DOCSDIR}
-		${INSTALL_DATA} ${WRKSRC}/README ${DOCSDIR}/
+.if ${PORT_OPTIONS:MDOCS}
+	@${MKDIR} ${DOCSDIR}
+	(cd ${WRKSRC} && ${INSTALL_DATA} README ${DOCSDIR})
 .endif
 
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
